# neutryx-rust

./: .clauderc.json  .dockerignore  .gcloudignore  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  Dockerfile.gui  README.md  cloudbuild.yaml  rust-toolchain.toml
crates/pricer_core/: Cargo.toml
crates/pricer_core/benches/: core_benchmarks.rs
crates/pricer_core/src/: lib.rs
crates/pricer_core/src/market_data/: error.rs  mod.rs
crates/pricer_core/src/market_data/curves/: credit.rs  curve_enum.rs  curve_set.rs  flat.rs  interpolated.rs  mod.rs  traits.rs
crates/pricer_core/src/market_data/surfaces/: flat.rs  fx.rs  interpolated.rs  mod.rs  traits.rs
crates/pricer_core/src/math/: smoothing.rs
crates/pricer_core/src/math/interpolators/: ad_tests.rs  bilinear.rs  cubic_spline.rs  linear.rs  mod.rs
crates/pricer_core/src/math/solvers/: brent.rs  config.rs  levenberg_marquardt.rs  mod.rs  newton_raphson.rs
crates/pricer_core/src/traits/: calibration.rs  mod.rs  priceable.rs  risk.rs
crates/pricer_core/src/types/: currency.rs  currency_pair.rs  dual.rs  error.rs  mod.rs  time.rs
crates/pricer_core/tests/: dual_integration.rs  module_exports.rs
crates/pricer_kernel/: Cargo.toml  build.rs
crates/pricer_kernel/benches/: kernel_benchmarks.rs  kernel_iai.rs
crates/pricer_kernel/src/: integration_tests.rs  lib.rs  verify_enzyme.rs
crates/pricer_kernel/src/analytical/: asian.rs  barrier.rs  mod.rs
crates/pricer_kernel/src/checkpoint/: budget.rs  manager.rs  mod.rs  state.rs  strategy.rs
crates/pricer_kernel/src/enzyme/: mod.rs
crates/pricer_kernel/src/greeks/: config.rs  mod.rs  result.rs  tests.rs
crates/pricer_kernel/src/mc/: mod.rs  paths.rs  payoff.rs  pricer.rs  pricer_checkpoint.rs  thread_local.rs  workspace.rs  workspace_checkpoint.rs
crates/pricer_kernel/src/path_dependent/: payoff_type.rs
crates/pricer_kernel/src/rng/: tests.rs
crates/pricer_kernel/tests/: analytical_comparison.rs  e2e_path_dependent.rs  l1_l2_integration.rs
crates/pricer_models/: Cargo.toml
crates/pricer_models/src/: demo.rs  lib.rs
crates/pricer_models/src/analytical/: bachelier.rs  black_scholes.rs  distributions.rs  error.rs  garman_kohlhagen.rs  mod.rs
crates/pricer_models/src/calibration/: error.rs  heston.rs  hull_white.rs  mod.rs  model_calibrator.rs  result.rs  sabr.rs  swaption_calibrator.rs  targets.rs
crates/pricer_models/src/instruments/: error.rs  exercise.rs  forward.rs  mod.rs  params.rs  payoff.rs  swap.rs  traits.rs  vanilla.rs
crates/pricer_models/src/instruments/commodity/: mod.rs
crates/pricer_models/src/instruments/credit/: cds.rs  mod.rs  pricing.rs  simulation.rs
crates/pricer_models/src/instruments/equity/: mod.rs
crates/pricer_models/src/instruments/exotic/: mod.rs
crates/pricer_models/src/models/: gbm.rs  heston.rs  mod.rs  model_enum.rs  sabr.rs  stochastic.rs
crates/pricer_models/src/schedules/: error.rs  frequency.rs  mod.rs  period.rs  schedule.rs
crates/pricer_optimiser/: Cargo.toml
crates/pricer_optimiser/benches/: optimiser_benchmarks.rs
crates/pricer_optimiser/src/: lib.rs  provider.rs
crates/pricer_optimiser/src/bootstrapping/: adjoint_solver.rs  cache.rs  config.rs  curve.rs  date_utils.rs  engine.rs  error.rs  instrument.rs  mod.rs  multi_curve.rs  sensitivity.rs
crates/pricer_optimiser/tests/: integration_tests.rs
crates/pricer_risk/: Cargo.toml
crates/pricer_risk/benches/: risk_benchmarks.rs
crates/pricer_risk/src/: demo.rs  lib.rs
crates/pricer_risk/src/exposure/: mod.rs
crates/pricer_risk/src/parallel/: memory_monitor.rs  mod.rs  portfolio_greeks.rs
crates/pricer_risk/src/portfolio/: builder.rs  counterparty.rs  error.rs  ids.rs  mod.rs  netting_set.rs  trade.rs
crates/pricer_risk/src/scenarios/: aggregator.rs  bucket_dv01.rs  curve_shifts.rs  engine.rs  greeks_by_factor.rs  irs_greeks_by_factor.rs  mod.rs  presets.rs  risk_factor.rs  shifts.rs
crates/pricer_risk/src/soa/: mod.rs  trade_soa.rs
crates/pricer_risk/src/xva/: cva.rs  dva.rs  fva.rs  mod.rs  params.rs  result.rs
crates/pricer_server/: Cargo.toml
crates/pricer_server/src/: config.rs  lib.rs  main.rs  server.rs
crates/pricer_server/src/routes/: greeks.rs  health.rs  mod.rs  pricing.rs  xva.rs
crates/pricer_xva/: Cargo.toml
crates/pricer_xva/benches/: xva_benchmarks.rs
crates/pricer_xva/src/: lib.rs
crates/pricer_xva/src/exposure/: mod.rs
crates/pricer_xva/src/parallel/: mod.rs
crates/pricer_xva/src/portfolio/: builder.rs  counterparty.rs  error.rs  ids.rs  mod.rs  netting_set.rs  trade.rs
crates/pricer_xva/src/soa/: exposure_soa.rs  trade_soa.rs
crates/pricer_xva/src/xva/: cva.rs  dva.rs  error.rs  fva.rs  mod.rs  params.rs  result.rs
demo/frictional_bank/: Cargo.toml  Dockerfile
demo/frictional_bank/src/: config.rs  error.rs  lib.rs  main.rs
demo/frictional_bank/src/workflow/: eod_batch.rs  intraday.rs  irs_aad.rs  mod.rs  stress_test.rs
demo/frictional_bank/tests/: aips_flow_test.rs  e2e_integration_test.rs  irs_aad_e2e_test.rs  workflow_integration_test.rs
demo/gui/: Cargo.toml  tmpclaude-96af-cwd
demo/gui/src/: api_client.rs  app.rs  lib.rs  main.rs  screens.rs  visualisation.rs
demo/gui/src/screens/: irs_aad.rs
demo/gui/src/web/: handlers.rs  jobs.rs  main.rs  metrics.rs  mod.rs  openapi.rs  pricer_types.rs  scenario_handlers.rs  websocket.rs
demo/gui/static/: app.js  index.html  style.css
demo/inputs/: Cargo.toml
demo/inputs/src/: lib.rs
demo/inputs/src/file_source/: csv_generator.rs  mod.rs
demo/inputs/src/market_data_provider/: bloomberg_sim.rs  mod.rs  reuters_sim.rs  synthetic.rs
demo/inputs/src/trade_source/: fpml_generator.rs  front_office.rs  mod.rs
demo/inputs/tests/: sample_data_validation.rs
demo/outputs/: Cargo.toml
demo/outputs/src/: lib.rs
demo/outputs/src/regulatory/: audit_store.rs  mod.rs  regulator_api.rs
demo/outputs/src/report_sink/: email_sender.rs  file_writer.rs  mod.rs
demo/outputs/src/risk_dashboard/: metrics_store.rs  mod.rs  websocket_sink.rs
demo/outputs/src/settlement/: mod.rs  netting_engine.rs  swift_receiver.rs
(+287 files in other folders)
