[package]
name = "pricer_kernel"
description = "Enzyme LLVM-level automatic differentiation engine for XVA pricing (Layer 3)"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[dependencies]
# Phase 3.0: NO dependencies on other pricer_* crates (complete isolation)
# LLVM 18 bindings for Enzyme support
llvm-sys = { version = "180", features = ["prefer-dynamic"], optional = true }

# Basic numeric traits
num-traits.workspace = true

# Random number generation (Phase 3.1a: RNG infrastructure)
rand.workspace = true
rand_distr.workspace = true

[dev-dependencies]
approx.workspace = true
proptest.workspace = true

[build-dependencies]
# Future: For linking Enzyme LLVM plugin
# cc = "1.0"

[features]
default = []
# Future: enzyme-ad feature for actual Enzyme integration
enzyme-ad = ["dep:llvm-sys"]
