[package]
name = "pricer_kernel"
description = "Enzyme LLVM-level automatic differentiation engine for XVA pricing (Layer 3)"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[dependencies]
# Phase 4: Optional L1/L2 integration
# pricer_core with default-features=false to avoid num-dual (use enzyme-mode)
pricer_core = { path = "../pricer_core", optional = true, default-features = false }
pricer_models = { path = "../pricer_models", optional = true }

# LLVM 18 bindings for Enzyme support
llvm-sys = { version = "180", features = ["prefer-dynamic"], optional = true }

# Basic numeric traits
num-traits.workspace = true

# Error handling
thiserror.workspace = true

# Random number generation (Phase 3.1a: RNG infrastructure)
rand.workspace = true
rand_distr.workspace = true

# Parallel processing (Phase 4: Thread-local workspace)
rayon.workspace = true

# Serialization (optional)
serde = { workspace = true, optional = true }

[dev-dependencies]
approx.workspace = true
proptest.workspace = true
criterion = { workspace = true, features = ["html_reports"] }
# Iai-callgrind for instruction-count based benchmarks (CI reproducibility)
# Requires Valgrind on Linux - used only in CI environment
iai-callgrind = "0.14"

[[bench]]
name = "kernel_benchmarks"
harness = false

[[bench]]
name = "kernel_iai"
harness = false

[build-dependencies]
# Future: For linking Enzyme LLVM plugin
# cc = "1.0"

[features]
default = []
# Phase 4: L1/L2 integration for smoothing functions, YieldCurve, Instrument
l1l2-integration = ["dep:pricer_core", "dep:pricer_models"]
# Enzyme AD feature for actual Enzyme integration (works with or without l1l2-integration)
enzyme-ad = ["dep:llvm-sys"]
# Serialization support for GreeksResult
serde = ["dep:serde"]
