[package]
name = "pricer_models"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[dependencies]
pricer_core = { path = "../pricer_core" }
num-traits.workspace = true
serde.workspace = true
thiserror.workspace = true

[dev-dependencies]
approx.workspace = true
proptest.workspace = true
