[package]
name = "pricer_models"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "Financial instrument definitions and stochastic models for neutryx-rust"

[features]
default = ["equity", "serde"]

# Asset class features
equity = []
rates = []
credit = []
fx = []
commodity = []
exotic = ["equity"]  # Exotic products typically extend equity derivatives

# Convenience feature for all asset classes
all = ["equity", "rates", "credit", "fx", "commodity", "exotic"]

# Serialisation support
serde = ["dep:serde", "pricer_core/serde"]

# AD (Automatic Differentiation) support - forwards to pricer_core
num-dual-mode = ["pricer_core/num-dual-mode"]

[dependencies]
pricer_core = { path = "../pricer_core" }
num-traits.workspace = true
chrono.workspace = true
serde = { workspace = true, optional = true }
thiserror.workspace = true

[dev-dependencies]
approx.workspace = true
proptest.workspace = true
criterion = { workspace = true, features = ["html_reports"] }

[[bench]]
name = "models_benchmarks"
harness = false
