[package]
name = "pricer_optimiser"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "Calibration, bootstrapping, and numerical solvers for Neutryx"

[dependencies]
# L1: Core types and traits
pricer_core = { path = "../pricer_core" }

# L2: Instrument and model definitions
pricer_models = { path = "../pricer_models" }

# L3: Pricing engine (for gradient computation)
# pricer_pricing = { path = "../pricer_pricing", optional = true }

# Numeric
num-traits.workspace = true
num-dual = { workspace = true, optional = true }

# Error handling
thiserror.workspace = true
anyhow.workspace = true

# Serialisation
serde = { workspace = true, optional = true }

[features]
default = ["num-dual-mode"]
num-dual-mode = ["dep:num-dual", "pricer_core/num-dual-mode"]
serde = ["dep:serde", "pricer_core/serde", "pricer_models/serde"]
# enzyme = ["pricer_pricing"]

[dev-dependencies]
approx.workspace = true
proptest.workspace = true

[[bench]]
name = "optimiser_benchmarks"
harness = false
