[package]
name = "pricer_risk"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "Portfolio risk management and XVA calculations for neutryx-rust"

[features]
default = []
serde = ["dep:serde"]

[dependencies]
pricer_core = { path = "../pricer_core" }
pricer_models = { path = "../pricer_models" }
pricer_optimiser = { path = "../pricer_optimiser" }
pricer_pricing = { path = "../pricer_pricing", features = ["l1l2-integration"] }
rayon.workspace = true
serde = { workspace = true, optional = true }
thiserror.workspace = true

[dev-dependencies]
approx.workspace = true
criterion = { workspace = true, features = ["html_reports"] }

[[bench]]
name = "risk_benchmarks"
harness = false
