[package]
name = "frictional_bank"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "FrictionalBank demo orchestrator - A-I-P-S architecture demonstration"

[[bin]]
name = "frictional-bank"
path = "src/main.rs"

[dependencies]
# Demo layer
demo_inputs = { path = "../inputs" }
demo_outputs = { path = "../outputs" }

# Pricer layer
pricer_core = { path = "../../crates/pricer_core" }
pricer_models = { path = "../../crates/pricer_models", features = ["equity", "rates", "credit", "fx"] }
pricer_risk = { path = "../../crates/pricer_risk" }
pricer_optimiser = { path = "../../crates/pricer_optimiser" }
pricer_pricing = { path = "../../crates/pricer_pricing", optional = true }

# Async runtime
tokio = { workspace = true }

# Configuration
toml = { workspace = true }
serde = { workspace = true }

# Date/time
chrono = { workspace = true }

# Error handling
thiserror = { workspace = true }
anyhow = { workspace = true }

# Logging
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

# Async channels
async-channel = "2.3"

# Async traits
async-trait = "0.1"

# HTTP server (for Cloud Run deployment)
axum = { workspace = true }
tower-http = { version = "0.6", features = ["cors", "trace"] }
serde_json = { workspace = true }

[dev-dependencies]
tokio-test = "0.4"
tempfile = "3"

[features]
default = []
# Enable full L1/L2 integration with pricer_pricing for IRS AAD workflow
l1l2-integration = ["pricer_pricing", "pricer_pricing/l1l2-integration"]
# Enable Enzyme AD support (requires nightly)
enzyme-ad = ["pricer_pricing", "pricer_pricing/enzyme-ad"]
