[package]
name = "demo_gui"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "TUI and Web dashboard for FrictionalBank demo"

[[bin]]
name = "demo-tui"
path = "src/main.rs"

[[bin]]
name = "demo-web"
path = "src/web/main.rs"
required-features = ["web"]

[features]
default = []
web = ["axum", "tower-http", "futures", "chrono", "open"]
enzyme-ad = ["frictional_bank/enzyme-ad", "pricer_pricing/enzyme-ad"]
openapi = ["utoipa", "utoipa-swagger-ui"]

[dependencies]
# TUI framework
ratatui = "0.26"
crossterm = "0.27"

# Demo crates
frictional_bank = { path = "../frictional_bank" }

# Pricer layer (for IRS AAD screen types)
pricer_pricing = { path = "../../crates/pricer_pricing" }

# Optimiser layer (for bootstrapping)
pricer_optimiser = { path = "../../crates/pricer_optimiser" }

# Async runtime
tokio = { workspace = true }

# HTTP client
reqwest = { version = "0.12", features = ["json"] }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# UUID for curve cache
uuid = { version = "1.0", features = ["v4"] }

# Error handling
anyhow = { workspace = true }
thiserror = { workspace = true }

# Logging
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

# Web server (optional)
axum = { workspace = true, features = ["ws"], optional = true }
tower-http = { version = "0.5", features = ["fs", "cors", "set-header"], optional = true }
futures = { version = "0.3", optional = true }
chrono = { workspace = true, optional = true }
open = { version = "5", optional = true }

# OpenAPI documentation (optional)
utoipa = { version = "4", features = ["axum_extras"], optional = true }
utoipa-swagger-ui = { version = "7", features = ["axum"], optional = true }

# Validation
validator = { version = "0.19", features = ["derive"] }

[dev-dependencies]
tokio-test = "0.4"
